--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.50'
+
+
     ext {
         buildToolsVersion = "28.0.3"
+        kotlin_version = '1.3.50'
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
@@ -14,6 +18,8 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.1")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -35,4 +41,21 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+ext {
+    compileSdkVersion = 28
+    minSdkVersion = 21
+    targetSdkVersion = 28
+
+    gsonVersion = "2.7"
+    okHttpVersion = "4.2.2"
+    rxJavaVersion = "2.1.14"
+    retrofitVersion = "2.2.0"
+    rxKotlinVersion = "2.2.0"
+    rxAndroidVersion = "2.0.2"
+    rxRetrofitAdapterVersion = "2.2.0"
+    gsonRetrofitConverterVersion = "2.1.0"
+
+    apiExpensesPath = '\"https://dev.mubbe-api.com/\"'
 }
