--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -192,6 +192,7 @@ android {
 }
 
 dependencies {
+    implementation project(':rest')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
