--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -193,6 +193,7 @@ android {
 
 dependencies {
     implementation project(':rest')
+    implementation project(':rx-extensions')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -204,6 +205,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "io.reactivex.rxjava2:rxkotlin:${rootProject.ext.rxKotlinVersion}"
+    implementation "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxAndroidVersion}"
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermesvm/android/";
