--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript { 
+buildscript {
     ext.kotlin_version = '1.3.50'
 
 
@@ -50,6 +50,7 @@ ext {
 
     gsonVersion = "2.7"
     okHttpVersion = "4.2.2"
+    kotlinVersion = "1.3.50"
     rxJavaVersion = "2.1.14"
     retrofitVersion = "2.2.0"
     rxKotlinVersion = "2.2.0"
@@ -58,5 +59,5 @@ ext {
     rxRetrofitAdapterVersion = "2.2.0"
     gsonRetrofitConverterVersion = "2.1.0"
 
-    apiExpensesPath = '\"https://dev.mubbe-api.com/\"'
+    apiExpensesPath = '\"http://155.138.148.230:3000/\"'
 }
