--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,6 +50,7 @@ ext {
 
     gsonVersion = "2.7"
     okHttpVersion = "4.2.2"
+    lottieVersion = "3.2.2"
     kotlinVersion = "1.3.50"
     rxJavaVersion = "2.1.14"
     retrofitVersion = "2.2.0"
@@ -59,5 +60,5 @@ ext {
     rxRetrofitAdapterVersion = "2.2.0"
     gsonRetrofitConverterVersion = "2.1.0"
 
-    apiExpensesPath = '\"http://155.138.148.230:3000/\"'
+    apiExpensesPath = '\"http://192.168.0.117:3000/\"'
 }
